MRD-1799 Upgrade to Spring Boot 3 (#980)
* WIP Upgrade to Spring Boot 3

* WIP Run HMPPS script for upgrade to Spring Boot 3

* Address analysis warnings

* Bump hmpps-sqs-spring-boot-starter

* Optimize imports

* Update logback-spring

* Tidy up dependencies

* Put rest assured dependency back for functional tests

* Use Hypersistence Utils for Jsonb database columns

* Make status endpoint deterministic

* Suppress dynamic Java agent warning

* Bring back hibernate dialect setting

* Use correct sentry starter for Spring Boot 3

* Remove allOpen plugin configuration

* Add option to match on trailing slashes in URL

* Remove logback exclusions from Renovate config

* Return NoResourceFoundException as 404

* Set up Swagger docs